Fixed overlapping save & delete button for tabbale class. Ticket #139

--- a/docroot/sites/all/themes/drupalcampcebu2014/public/sass/partials/_speakers.scss
+++ b/docroot/sites/all/themes/drupalcampcebu2014/public/sass/partials/_speakers.scss
@@ -69,7 +69,7 @@
 }
 
 .tabbable {
-  min-height: 410px;
+  min-height: 500px;
 }
 
 .speaker-info {
